# admin-api-rust

./: Cargo.toml  README.md  certificats.bat  localhost-key.pem  localhost.pem
.github/workflows/: deploy.yml
src/: main.rs
src/controllers/: docker.rs
src/datas/: docker.rs  mod.rs
src/errors/: error_status.rs  mod.rs
src/events/: docker.rs  mod.rs  system.rs
src/quic/: mod.rs
src/routes/: docker.rs  mod.rs
src/serializers/: docker.rs
src/services/: docker.rs
src/sockets/: mod.rs
src/webtransport/: docker.rs  mod.rs  system.rs
