[package]
name = "admin-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
bollard = "0.18.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
tokio-tungstenite = "0.26.1"
futures = "0.3.31"
futures-util = "0.3.31"
socketioxide = "0.16.1"
