[package]
name = "admin-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
bollard = "0.18.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
tokio-tungstenite = "0.26.2"
futures = "0.3.31"
futures-util = "0.3.31"
quiche = "0.24.1"
env_logger = "0.11.6"
log = "0.4.26"
quinn = "0.11.6"
hyper = "1.6.0"
hyper-rustls = "0.27.5"
wtransport = "0.5.0"
rustls = "0.23.23"
brotli = "7.0.0"
